# ah32

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PACKAGING.md  Plan写回到WPS文档-实现细节.md  README.en.md  README.md  SECURITY.md  TODOLIST.md  TODOLIST_ET.md  TODOLIST_PPT.md  TODOLIST_WRITER.md  bidding_policy_195_coverage.md  compose.yml  findings.md  macro_bench_policy_195_matrix.md  progress.md  pyproject.toml  pytest.ini  start.py  task_plan.md  启动指南.md
.github/workflows/: ci.yml  release.yml
ah32-ui-next/: .env.example  .gitignore  .npmrc  README.md  index.html  install-wps-plugin.ps1  manifest.xml  package-lock.json  package.json  ribbon.xml  taskpane.html  tsconfig.app.json  uninstall-wps-plugin.ps1  vite.config.ts  wpsjs.config.js
ah32-ui-next/js/: ribbon.js  util.js
ah32-ui-next/scripts/: wps-pin-url.mjs  wpsjs-debug.mjs
ah32-ui-next/src/: App.vue  main-minimal.ts  main.ts
docker/: entrypoint.sh
schemas/: ah32.skill.v1.schema.json  ah32.skills_pack.v1.schema.json  ah32.styleSpec.v1.schema.json
scripts/: check_utf8_io.py  macro_bench.py  macro_bench_30.py  macro_node_runner.js  package-backend.ps1  package-backend.sh  package-wps-plugin.ps1  query_audit.py  query_telemetry.py  rag_bench.py  run-wps-autobench-suite-set.ps1  run-wps-autobench.ps1  selfcheck_ssrf_guard.py  selfcheck_tenancy_isolation.py  smoke_agentic_stream.py  watch_backend_log.py  wps_taskpane_driver.py
skills/: DEVELOPMENT.md  README.md  todolist_skills.md
src/ah32/: __init__.py  (+6 more)
(+456 files in other folders)
